welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  
  baisserCrayon()
  likeASnake()
}


def likeASnake(){
  if (getDirection() == Direction.EST){
    avance(6)
    tdroite()
  }
  else {
    avance(6)
    tgauche()
  }
}
  
  
def tgauche(){
  gauche()
  avance()
  gauche()
}

def tdroite(){
  droite()
  avance()
  droite()
  
}